# AviUtl2_CameraTransform_K_Script

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES.md  astra.toml
.github/workflows/: releaser.yml
dll_src/: .clang-format  CMakeLists.txt  main.cpp  main.def  structs.hpp  transform.cpp  transform.hpp  vector_3d.hpp  vector_base.hpp
modules/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  main.cpp  quaternion.hpp  transform.cpp  transform.hpp  vcpkg-configuration.json  vcpkg.json
scripts/: @CameraTransform_K.in.cam2  @CameraTransform_K_template.cam2  astra.config.json  parent.lua  track.lua
scripts/camera/: lens.lua  track.lua  transform.lua
scripts/fx/: empty.lua  relations.lua  utilities.lua
tools/: build.py  build_config.json
